⚡ Bolt: [performance improvement] Optimize PreAuthorization N+1 queries via batch fetching
Resolves severe N+1 database querying issues when retrieving lists of Pre-Authorizations in the application inbox and general list endpoints. Replaces individual repository `.findById()` lookups with an O(1) in-memory bulk Map operation using `IN` queries.

Co-authored-by: omarafosh <88043673+omarafosh@users.noreply.github.com>